# PortMonitor

./: README.md  README.old.md  WindowManager.py  pyproject.toml
Serial_Port/: Serial_MainWindow.py  Serial_MainWindow.ui  app_MathProcess.py  app_SerialProcess.py  app_SerialWindows.py  config.json  config_manager.py
docs/: Chapter_6.md  archi.md  docs.md  presentation.typ  task.md
docs/puml_src/: class_diagram.puml  class_diagram_simple.puml  seq_01_initialization.puml  seq_02_open_port.puml  seq_03_receive_data.puml  seq_04_send_data.puml  seq_05_auto_send.puml  seq_06_save_config.puml  seq_07_close.puml  sequence_diagram.puml
