[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PortMonitor"
version = "0.1.0"
description = "A Serial Port Monitor application based on PyQt5"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Sanqiuzhiji", email = "sanqiuzhiji@xx.x" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt5==5.15.11",
    "pyqt5-qt==5.15.2",
    "pyqt5-sip==12.18.0",
    "numpy",
    "pyqtgraph",
]

[project.urls]
"Homepage" = "https://github.com/example/PortMonitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["Serial_Port*"]
